--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
-  </head>
-  <body>
-
+    <title> Snake Game</title>
     <style type="text/css">
+      #code {
+        display: inline-block;
+        width: 400px;
+        height: 300px;
+      }
+
+      #apply {
+        display: inline-block;
+      }
+
+      #snake-board {
+        float: right;
+      }
+
       .snake-body {
         background-color: black;
       }
@@ -13,7 +24,43 @@
       .snake-food {
         background-color: blue;
       }
+
+      .editor {
+        width: 300px;
+        padding: 10px;
+        float: left;
+      }
     </style>
-    <script type="text/javascript" src="dist/snake-game.js"></script>
+  </head>
+  <body>
+    <div class="editor">
+      <button id="apply" onclick="apply()">Aplicar</button>
+      <label>Example of code</label>
+      <textarea id="code">
+function moveDecision() {
+  const head = this.snake.body[this.snake.body.length-1];
+
+  let move = ''
+  if (this.snake.direction === 'down'){
+    if (head.x === this.bound.x) move = 'right';
+  }
+
+  if (this.snake.direction === 'right') {
+    if (head.y === this.bound.y) move = 'up';
+  }
+
+  if (this.snake.direction === 'up') {
+    if(head.x === 0) move = 'left';
+  }
+
+  if (this.snake.direction === 'left') {
+    if(head.y === 0) move = 'down';
+  }
+
+  return move;
+}
+  </textarea>
+</div>
+  <script type="text/javascript" src="dist/snake-game.js"></script>
   </body>
 </html>
