--- a/index.html
+++ b/index.html
@@ -37,32 +37,32 @@
       <button id="apply" onclick="apply()">Aplicar</button>
       <label>Example of code</label>
       <textarea id="code">
-class Player {
-    move(context) {
+  class Player {
+      move(context) {
 
-      const head = context.snake.body[context.snake.body.length-1];
+        const head = context.snake.body[context.snake.body.length-1];
 
-      let move = context.snake.direction;
+        let move = context.snake.direction;
 
-      if (context.snake.direction === 'down'){
-        if (head.x === context.boundaries.x.max) move = 'right';
+        if (context.snake.direction === 'down'){
+          if (head.x === context.boundaries.x.max || head.x === context.food.x) move = 'right';
+        }
+
+        if (context.snake.direction === 'right') {
+          if (head.y === context.boundaries.y.max) move = 'up';
+        }
+
+        if (context.snake.direction === 'up') {
+          if(head.x === 0 || head.x === context.food.x) move = 'left';
+        }
+
+        if (context.snake.direction === 'left') {
+          if(head.y === 0) move = 'down';
+        }
+
+        return move;
       }
-
-      if (context.snake.direction === 'right') {
-        if (head.y === context.boundaries.y.max) move = 'up';
-      }
-
-      if (context.snake.direction === 'up') {
-        if(head.x === 0) move = 'left';
-      }
-
-      if (context.snake.direction === 'left') {
-        if(head.y === 0) move = 'down';
-      }
-
-      return move;
-    }
-}
+  }
   </textarea>
 </div>
   <script type="text/javascript" src="dist/snake-game.js"></script>
